--- a/build.gradle
+++ b/build.gradle
@@ -31,13 +31,13 @@ dependencies {
 	implementation 'com.okta.spring:okta-spring-boot-starter:3.0.5'
 	
 	// SLF4J を使う
-	// implementation 'org.slf4j:slf4j-api:2.0.9'
-	// implementation 'org.slf4j:jcl-over-slf4j:2.0.9'
-	// // Logback を使う
-	// implementation 'ch.qos.logback:logback-core:1.3.11'
-	// implementation 'ch.qos.logback:logback-classic:1.3.11'
+	implementation 'org.slf4j:slf4j-api:2.0.9'
+	implementation 'org.slf4j:jcl-over-slf4j:2.0.9'
+	// Logback を使う
+	implementation 'ch.qos.logback:logback-core:1.3.11'
+	implementation 'ch.qos.logback:logback-classic:1.3.11'
 
-	// implementation 'com.mashape.unirest:unirest-java:1.4.9'
+	implementation 'com.mashape.unirest:unirest-java:1.4.9'
 
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
