--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,16 @@
 server:
     port: 8080
 
+logging:
+    level:
+        root: ERROR
+        org:
+            springframework:
+                web: ERROR
+        com:
+            example:
+                iibc: TRACE
+
 spring:
     datasource:
         url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/appdb
